--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,5 @@
 events {
-    worker_connections 1024;
+    worker_connections 1024; ## Padrão 1024
 }
 
 http {
@@ -22,7 +22,7 @@ http {
         }
     }
 
-    upstream conversao {
+    upstream conversao { ## Balanceamento de carga
         server conversaotemperatura01:8080 weight=3;
         server conversaotemperatura02:8080;
         server conversaotemperatura03:8080;
