--- a/nginx.conf
+++ b/nginx.conf
@@ -23,7 +23,7 @@ http {
     }
 
     upstream conversao { ## Balanceamento de carga
-        server conversaotemperatura01:8080 weight=3;
+        server conversaotemperatura01:8080 weight=3; ## weight 3, peso 3. Após 3 requisições passa para outro servidor
         server conversaotemperatura02:8080;
         server conversaotemperatura03:8080;
     }
